<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">AntennaPod</string>
    <string name="provider_authority" translatable="false">de.danoeh.antennapod.provider</string>
    <string name="feed_update_receiver_name">Update Subscriptions</string>
    <string name="feeds_label">Podcasts</string>
    <string name="statistics_label">Statistics</string>
    <string name="add_feed_label">Add Podcast</string>
    <string name="episodes_label">Episodes</string>
    <string name="queue_label">Queue</string>
    <string name="all_episodes_short_label">All</string>
    <string name="new_episodes_label">New</string>
    <string name="favorite_episodes_label">Favorites</string>
    <string name="new_label">New</string>
    <string name="settings_label">Settings</string>
    <string name="downloads_label">Downloads</string>
    <string name="open_autodownload_settings">Open Settings</string>
    <string name="downloads_running_label">Running</string>
    <string name="downloads_completed_label">Completed</string>
    <string name="downloads_log_label">Log</string>
    <string name="subscriptions_label">Subscriptions</string>
    <string name="subscriptions_list_label">Subscriptions List</string>
    <string name="cancel_download_label">Cancel Download</string>
    <string name="playback_history_label">Playback History</string>
    <string name="gpodnet_main_label">gpodder.net</string>
    <string name="gpodnet_auth_label">gpodder.net Login</string>
    <string name="episode_cache_full_title">Episode cache full</string>
    <string name="episode_cache_full_message">The episode cache limit has been reached. You can increase the cache size in the Settings.</string>
    <string name="playback_statistics_label">Playback</string>
    <string name="download_statistics_label">Downloads</string>
    <string name="notification_pref_fragment">Notifications</string>
    <string name="app_action_not_found">\"%1$s\" not found</string>
    <string name="total_time_listened_to_podcasts">Total time of episodes played:</string>
    <string name="statistics_details_dialog">%1$d out of %2$d episodes started.\n\nPlayed %3$s out of %4$s.</string>
    <string name="statistics_mode">Statistics mode</string>
    <string name="statistics_mode_normal">Calculate duration that was actually played. Playing twice is counted twice, while marking as played is not counted</string>
    <string name="statistics_mode_count_all">Sum up all episodes marked as played</string>
    <string name="statistics_speed_not_counted">Notice: Playback speed is never taken into account.</string>
    <string name="statistics_reset_data">Reset statistics data</string>
    <string name="share_label">Share</string>
    <string name="share_label_with_ellipses">Share…</string>
    <string name="multi_select">Multi select</string>
    <string name="open_podcast">Open Podcast</string>
    <string name="delete_label">Delete</string>
    <string name="remove_new_flag_label">Remove \"new\" flag</string>
    <string name="mark_read_label">Mark as played</string>
    <string name="mark_unread_label">Mark as unplayed</string>
    <string name="add_to_queue_label">Add to Queue</string>
    <string name="remove_from_queue_label">Remove from Queue</string>
    <string name="add_to_favorite_label">Add to Favorites</string>
    <string name="remove_from_favorite_label">Remove from Favorites</string>
    <string name="visit_website_label">Visit Website</string>
    <string name="skip_episode_label">Skip episode</string>
    <string name="activate_auto_download">Activate Auto Download</string>
    <string name="deactivate_auto_download">Deactivate Auto Download</string>
    <string name="reset_position">Reset Playback Position</string>
    <string name="automation">Automation</string>
    <string name="download_pref_details">Details</string>
    <string name="import_export_pref">Import/Export</string>
    <string name="import_export_search_keywords">backup, restore</string>
    <string name="interruptions">Interruptions</string>
    <string name="media_player">Media player</string>
    <string name="pref_episode_cleanup_title">Episode Cleanup</string>
    <string name="pref_episode_cleanup_summary">Episodes that should be eligible for removal if Auto Download needs space for new episodes</string>
    <string name="pref_pauseOnDisconnect_sum">Pause playback when headphones or bluetooth are disconnected</string>
    <string name="pref_unpauseOnHeadsetReconnect_sum">Resume playback when the headphones are reconnected</string>
    <string name="pref_unpauseOnBluetoothReconnect_sum">Resume playback when bluetooth reconnects</string>
    <string name="pref_followQueue_sum">Jump to next queue item when playback completes</string>
    <string name="pref_auto_delete_sum">Delete episode when playback completes</string>
    <string name="pref_auto_delete_title">Auto Delete</string>
    <string name="pref_smart_mark_as_played_sum">Mark episodes as played even if less than a certain amount of seconds of playing time is still left</string>
    <string name="pref_smart_mark_as_played_title">Smart Mark as Played</string>
    <string name="pref_skip_keeps_episodes_sum">Keep episodes when they are skipped</string>
    <string name="pref_skip_keeps_episodes_title">Keep Skipped Episodes</string>
    <string name="pref_favorite_keeps_episodes_sum">Keep episodes when they are marked Favorite</string>
    <string name="pref_favorite_keeps_episodes_title">Keep Favorite Episodes</string>
    <string name="pref_autoUpdateIntervallOrTime_title">Update Interval or Time of Day</string>
    <string name="pref_autoUpdateIntervallOrTime_sum">Specify an interval or a specific time of day to refresh the podcasts automatically</string>
    <string name="pref_followQueue_title">Continuous Playback</string>
    <string name="pref_pauseOnHeadsetDisconnect_title">Headphones or Bluetooth disconnect</string>
    <string name="pref_unpauseOnHeadsetReconnect_title">Headphones Reconnect</string>
    <string name="pref_unpauseOnBluetoothReconnect_title">Bluetooth Reconnect</string>
    <string name="pref_mobileUpdate_title">Mobile Updates</string>
    <string name="pref_mobileUpdate_sum">Select what should be allowed over the mobile data connection</string>
    <string name="pref_set_theme_title">Select Theme</string>
    <string name="pref_nav_drawer_items_title">Set Navigation Drawer items</string>
    <string name="pref_nav_drawer_items_sum">Change which items appear in the navigation drawer.</string>
    <string name="pref_nav_drawer_feed_order_title">Set Subscription Order</string>
    <string name="pref_nav_drawer_feed_order_sum">Change the order of your subscriptions</string>
    <string name="pref_nav_drawer_feed_counter_title">Set Subscription Counter</string>
    <string name="pref_nav_drawer_feed_counter_sum">Change the information displayed by the subscription counter. Also affects the sorting of subscriptions if \'Subscription Order\' is set to \'Counter\'.</string>
    <string name="pref_set_theme_sum">Change the appearance of AntennaPod.</string>
    <string name="pref_automatic_download_title">Automatic Download</string>
    <string name="pref_automatic_download_sum">Configure the automatic download of episodes.</string>
    <string name="pref_autodl_wifi_filter_title">Enable Wi-Fi filter</string>
    <string name="pref_autodl_wifi_filter_sum">Allow automatic download only for selected Wi-Fi networks.</string>
    <string name="pref_automatic_download_on_battery_title">Download when not charging</string>
    <string name="pref_automatic_download_on_battery_sum">Allow automatic download when the battery is not charging</string>
    <string name="pref_parallel_downloads_title">Parallel Downloads</string>
    <string name="pref_episode_cache_title">Episode Cache</string>
    <string name="pref_episode_cache_summary">Total number of downloaded episodes cached on the device. Automatic download will be suspended if this number is reached.</string>
    <string name="pref_playback_speed_sum">Customize the speeds available for variable speed playback</string>
    <string name="pref_fast_forward">Fast Forward Skip Time</string>
    <string name="pref_fast_forward_sum">Customize the number of seconds to jump forward when the fast forward button is clicked</string>
    <string name="pref_rewind">Rewind Skip Time</string>
    <string name="pref_rewind_sum">Customize the number of seconds to jump backwards when the rewind button is clicked</string>
    <string name="pref_expandNotify_title">High Notification priority</string>
    <string name="pref_expandNotify_sum">This usually expands the notification to show playback buttons.</string>
    <string name="pref_persistNotify_title">Persistent Playback Controls</string>
    <string name="pref_persistNotify_sum">Keep notification and lockscreen controls when playback is paused.</string>
    <string name="pref_compact_notification_buttons_title">Set Compact Notification Buttons</string>
    <string name="pref_compact_notification_buttons_sum">Change the playback buttons when the notification is collapsed. The play/pause button is always included.</string>
    <string name="pref_lockscreen_background_title">Set Lockscreen Background</string>
    <string name="pref_lockscreen_background_sum">Set the lockscreen background to the current episode\'s image. As a side effect, this will also show the image in third party apps.</string>
    <string name="pref_image_cache_size_title">Image Cache Size</string>
    <string name="pref_image_cache_size_sum">Size of the disk cache for images.</string>
    <string name="experimental_pref">Experimental</string>
    <string name="pref_proxy_title">Proxy</string>
    <string name="pref_proxy_sum">Set a network proxy</string>
    <string name="pref_cast_title">Chromecast support</string>
    <string name="pref_enqueue_downloaded_title">Enqueue Downloaded</string>
    <string name="pref_enqueue_downloaded_summary">Add downloaded episodes to the queue</string>
    <string name="antennapod_version">AntennaPod version</string>
    <string name="developers">Developers</string>
    <string name="translators">Translators</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="licenses">Licenses</string>
    <string name="licenses_summary">AntennaPod uses other great software</string>
    <string name="database">Database</string>
    <string name="opml">OPML</string>
    <string name="html">HTML</string>
    <string name="html_export_summary">Show your subscriptions to a friend</string>
    <string name="opml_export_summary">Transfer your subscriptions to another podcast app</string>
    <string name="opml_import_summary">Import your subscriptions from another podcast app</string>
    <string name="database_export_summary">Transfer subscriptions, listened episodes and queue to AntennaPod on another device</string>
    <string name="database_import_summary">Import AntennaPod database from another device</string>
    <string name="opml_import_label">OPML Import</string>
    <string name="opml_export_label">OPML export</string>
    <string name="html_export_label">HTML export</string>
    <string name="database_export_label">Database export</string>
    <string name="database_import_label">Database import</string>
    <string name="choose_data_directory">Choose Data Folder</string>
    <string name="pref_pausePlaybackForFocusLoss_sum">Pause playback instead of lowering volume when another app wants to play sounds</string>
    <string name="pref_pausePlaybackForFocusLoss_title">Pause for Interruptions</string>
    <string name="pref_resumeAfterCall_sum">Resume playback after a phone call completes</string>
    <string name="pref_resumeAfterCall_title">Resume after Call</string>
</resources>