<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:search="http://schemas.android.com/apk/com.bytehamster.lib.preferencesearch">

    <PreferenceCategory android:title="@string/database">
        <Preference
                android:key="prefDatabaseExport"
                search:keywords="@string/import_export_search_keywords"
                android:title="@string/database_export_label"
                android:summary="@string/database_export_summary"/>
        <Preference
                android:key="prefDatabaseImport"
                search:keywords="@string/import_export_search_keywords"
                android:title="@string/database_import_label"
                android:summary="@string/database_import_summary"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/opml">
        <Preference
                android:key="prefOpmlExport"
                android:title="@string/opml_export_label"
                android:summary="@string/opml_export_summary"/>
        <Preference
                android:key="prefOpmlImport"
                android:title="@string/opml_import_label"
                android:summary="@string/opml_import_summary"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/html">
        <Preference
                android:key="prefHtmlExport"
                android:title="@string/html_export_label"
                android:summary="@string/html_export_summary"/>
    </PreferenceCategory>
</PreferenceScreen>
