<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:custom="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@id/skip_episode_item"
        android:title="@string/skip_episode_label"
        custom:showAsAction="collapseActionView">
    </item>

    <item
        android:id="@+id/remove_new_flag_item"
        custom:showAsAction="collapseActionView"
        android:title="@string/remove_new_flag_label" />

    <item
        android:id="@+id/mark_read_item"
        custom:showAsAction="collapseActionView"
        android:title="@string/mark_read_label">
    </item>
    <item
        android:id="@+id/mark_unread_item"
        custom:showAsAction="collapseActionView"
        android:title="@string/mark_unread_label">
    </item>

    <item
        android:id="@+id/add_to_queue_item"
        custom:showAsAction="collapseActionView"
        android:title="@string/add_to_queue_label">
    </item>
    <item
        android:id="@+id/remove_from_queue_item"
        custom:showAsAction="collapseActionView"
        android:title="@string/remove_from_queue_label">
    </item>

    <item
        android:id="@+id/add_to_favorites_item"
        android:menuCategory="container"
        android:title="@string/add_to_favorite_label" />

    <item
        android:id="@+id/remove_from_favorites_item"
        android:menuCategory="container"
        android:title="@string/remove_from_favorite_label" />

    <item
        android:id="@+id/reset_position"
        custom:showAsAction="collapseActionView"
        android:title="@string/reset_position">
    </item>

    <item
        android:id="@+id/activate_auto_download"
        custom:showAsAction="collapseActionView"
        android:title="@string/activate_auto_download">
    </item>
    <item
        android:id="@+id/deactivate_auto_download"
        custom:showAsAction="collapseActionView"
        android:title="@string/deactivate_auto_download">
    </item>

    <item
        android:id="@+id/visit_website_item"
        android:icon="@drawable/ic_web"
        custom:showAsAction="ifRoom|collapseActionView"
        android:title="@string/visit_website_label">
    </item>
    <item
        android:id="@+id/share_item"
        android:menuCategory="container"
        android:title="@string/share_label_with_ellipses">
    </item>

    <item
        android:id="@+id/open_podcast"
        custom:showAsAction="collapseActionView"
        android:title="@string/open_podcast">
    </item>

</menu>
